# distributed-systems

./: .gitignore
lab1/c-client/: CMakeLists.txt  Makefile  c_client  cmake_install.cmake
lab1/c-client/src/util/: net.c  net.h
lab1/c-client/src/zad1/: client.c  client.h
lab1/c-client/src/zad2/: file_client.c  file_client.h
lab1/java-server/: pom.xml  run.sh
lab1/java-server/src/main/resources/: configuration.properties  imageNamesMapping.properties  logback.xml
lab2/: .gitignore  pom.xml
lab2/rmi-client/: build.sh  pom.xml  run.sh
lab2/rmi-client/src/main/java/pl/jdabrowa/distributed/: GameClientApplication.java
lab2/rmi-client/src/main/resources/: security.policy
lab2/rmi-interfaces/: pom.xml
lab2/rmi-server/: deploy.sh  pom.xml  startServer.sh
lab3/: pom.xml
lab3/echo-client/: pom.xml
lab3/echo-client/src/main/resources/: application.properties
lab3/jms-echo-server/: pom.xml
lab3/messageing-api/: pom.xml
lab3/messageing-api/src/test/resources/: application-test.properties
lab3/messaging-api/: pom.xml
lab3/messaging-api/src/test/resources/: application-test.properties
lab4/: .gitignore  compile-slice.sh  install-ice.sh  pom.xml  start-server.sh
lab4/src/main/resources/: ice-client.properties  ice-server.properties
lab4/src/main/slice/: ex1.ice
lab5/: .gitignore  pom.xml
lab5/src/main/java/pl/jdabrowa/distributed/: ApplicationMain.java
lab5/src/main/resources/: application.properties
lab6/: pom.xml
lab6/src/main/java/pl/jdabrowa/distributed/: ZookeeperMain.java  ZookeeperWatcher.java
(+172 files in other folders)
